# gobby

./: .boring  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  TODO  UNIQUE_TODO  autogen.sh  configure.ac  configure.in  de.0x539.gobby.gschema.xml.in  gobby-0.5.1  gobby-0.5.appdata.xml  gobby-0.5.desktop.in  gobby-0.5.metainfo.xml  gobby-0.5.metainfo.xml.in  gobby-0.5.xpm  gobby.1  meson.build  meson_options.txt  ui.xml  update-potfiles
code/: .gitignore  Makefile.am  application.cpp  application.hpp  main.cpp  meson.build  window.cpp  window.hpp
code/commands/: .gitignore  Makefile.am  application-commands.cpp  application-commands.hpp  auth-commands.cpp  auth-commands.hpp  autosave-commands.cpp  autosave-commands.hpp  browser-commands.cpp  browser-commands.hpp  browser-context-commands.cpp  browser-context-commands.hpp  edit-commands.cpp  edit-commands.hpp  file-commands.cpp  file-commands.hpp  folder-commands.cpp  folder-commands.hpp  help-commands.cpp  help-commands.hpp  subscription-commands.cpp  subscription-commands.hpp  synchronization-commands.cpp  synchronization-commands.hpp  user-join-commands.cpp  user-join-commands.hpp  view-commands.cpp  view-commands.hpp
code/core/: Makefile.am  applicationactions.cpp  applicationactions.hpp  browser.cpp  browser.hpp  certificatemanager.cpp  certificatemanager.hpp  chatsessionview.cpp  chatsessionview.hpp  chattablabel.cpp  chattablabel.hpp  closableframe.cpp  closableframe.hpp  connectionmanager.cpp  connectionmanager.hpp  credentialsgenerator.cpp  credentialsgenerator.hpp  documentinfostorage.cpp  documentinfostorage.hpp  docwindow.cpp  docwindow.hpp  filechooser.cpp  filechooser.hpp  folder.cpp  folder.hpp  foldermanager.cpp  foldermanager.hpp  header.cpp  header.hpp  hostsstorage.cpp  hostsstorage.hpp  huebutton.cpp  huebutton.hpp  iconmanager.cpp  iconmanager.hpp  knownhoststorage.cpp  knownhoststorage.hpp  menumanager.cpp  menumanager.hpp  nodewatch.cpp  (+35 more)
code/dialogs/: Makefile.am  connection-dialog.cpp  connection-dialog.hpp  connection-info-dialog.cpp  connection-info-dialog.hpp  document-location-dialog.cpp  document-location-dialog.hpp  documentlocationdialog.cpp  documentlocationdialog.hpp  entry-dialog.cpp  entry-dialog.hpp  entrydialog.cpp  entrydialog.hpp  find-dialog.cpp  find-dialog.hpp  finddialog.cpp  finddialog.hpp  goto-dialog.cpp  goto-dialog.hpp  gotodialog.cpp  gotodialog.hpp  initial-dialog.cpp  initial-dialog.hpp  initialdialog.cpp  initialdialog.hpp  open-location-dialog.cpp  open-location-dialog.hpp  openlocationdialog.cpp  openlocationdialog.hpp  password-dialog.cpp  password-dialog.hpp  preferences-dialog.cpp  preferences-dialog.hpp  preferencesdialog.cpp  preferencesdialog.hpp
code/operations/: Makefile.am  operation-delete.cpp  operation-delete.hpp  operation-export-html.cpp  operation-export-html.hpp  operation-new.cpp  operation-new.hpp  operation-open-multiple.cpp  operation-open-multiple.hpp  operation-open.cpp  operation-open.hpp  operation-rename.cpp  operation-rename.hpp  operation-save.cpp  operation-save.hpp  operation-subscribe-path.cpp  operation-subscribe-path.hpp  operations.cpp  operations.hpp
code/resources/: gobby.gresources.xml
code/util/: Makefile.am  asyncoperation.cpp  asyncoperation.hpp  closebutton.cpp  closebutton.hpp  color.cpp  color.hpp  config.cpp  config.hpp  defaultaccumulator.hpp  file.cpp  file.hpp  groupframe.cpp  groupframe.hpp  gtk-compat.hpp  historyentry.cpp  historyentry.hpp  i18n.cpp  i18n.hpp  keygen.cpp  keygen.hpp  resolv.cpp  resolv.hpp  secrets.cpp  secrets.hpp  serialize.cpp  serialize.hpp  uri.cpp  uri.hpp
help/: .gitignore  Makefile.am  gobby.omf.in  meson.build
help/C/: gobby.xml  index.docbook
inc/: .gitignore  Makefile.am  application_state.hpp  atomic.hpp  browser.hpp  buffer_def.hpp  buffer_wrapper.hpp  buffer_wrapper_generic.hpp  buffer_wrapper_win32.hpp  chat.hpp  colorsel.hpp  colorutil.hpp  common.hpp  config.hpp  config_.hpp  createdialog.hpp  defaultdialog.hpp  document.hpp  document_settings.hpp  documentlist.hpp  docwindow.hpp  dragdrop.hpp  encoding.hpp  encoding_selector.hpp  entrydialog.hpp  fileentry.hpp  finddialog.hpp  folder.hpp  gotodialog.hpp  gselector.hpp  gtksourceview.hpp  header.hpp  historyentry.hpp  hostdialog.hpp  hostprogressdialog.hpp  i18n.hpp  icon.hpp  initialdialog.hpp  ipc.hpp  joindialog.hpp  (+15 more)
inc/commands/: Makefile.am  browser-commands.hpp  edit-commands.hpp  file-commands.hpp  help-commands.hpp  view-commands.hpp
inc/core/: Makefile.am  browser.hpp  closableframe.hpp  documentinfostorage.hpp  docwindow.hpp  encodingselector.hpp  folder.hpp  header.hpp  huebutton.hpp  iconmanager.hpp  preferences.hpp  userlist.hpp
inc/dialogs/: Makefile.am  documentlocationdialog.hpp  finddialog.hpp  gotodialog.hpp  initialdialog.hpp  preferencesdialog.hpp
inc/io/: buffer_wrapper.hpp  main_connection.hpp
inc/operations/: .operation-open.hpp.swp  Makefile.am  documentinfostorage.hpp  operation-new.hpp  operation-open.hpp  operation-save.hpp  operations.hpp
inc/sourceview/: sourcebuffer.hpp  sourcelanguage.hpp  sourcelanguagesmanager.hpp  sourceview.hpp
inc/util/: Makefile.am  color.hpp  config.hpp  encoding.hpp  serialize.hpp
po/: ChangeLog  (+39 more)
src/: .gitignore  Makefile.am  application_state.cpp  atomic.cpp  browser.cpp  buffer_def.cpp  buffer_wrapper.cpp  buffer_wrapper_generic.cpp  buffer_wrapper_win32.cpp  chat.cpp  colorsel.cpp  colorutil.cpp  common.cpp  config.cpp  createdialog.cpp  defaultdialog.cpp  document.cpp  document_settings.cpp  documentlist.cpp  docwindow.cpp  dragdrop.cpp  encoding.cpp  encoding_selector.cpp  entrydialog.cpp  fileentry.cpp  finddialog.cpp  folder.cpp  gotodialog.cpp  gselector.cpp  gtksourceview.cpp  header.cpp  historyentry.cpp  hostdialog.cpp  hostprogressdialog.cpp  i18n.cpp  icon.cpp  initialdialog.cpp  io_connection_generic.cpp  io_connection_win32.cpp  ipc.cpp  (+18 more)
src/commands/: Makefile.am  browser-commands.cpp  browser-context-commands.cpp  edit-commands.cpp  file-commands.cpp  folder-commands.cpp  (+2 more)
(+132 files in other folders)
