include $(top_srcdir)/gnome-doc-utils.make

dist-hook: doc-dist-hook

DOC_MODULE = gobby
DOC_FIGURES = figures/main_window.png      \
              figures/preferences_editor.png \
	      figures/preferences_user.png \
	      figures/preferences_appearance.png \
	      figures/preferences_security.png \
	      figures/preferences_view.png

DOC_LINGUAS = 

