@YELP_HELP_RULES@

dist-hook: doc-dist-hook

HELP_ID = gobby
HELP_LINGUAS = 
HELP_FILES = index.docbook
HELP_MEDIA = figures/main_window.png      \
             figures/preferences_editor.png \
	     figures/preferences_user.png \
	     figures/preferences_appearance.png \
	     figures/preferences_security.png \
	     figures/preferences_view.png
