gnome.yelp(
  meson.project_name(),
  sources : [
    'index.docbook',
  ],
  media : [
    'figures/main_window.png',
    'figures/preferences_editor.png',
    'figures/preferences_user.png',
    'figures/preferences_appearance.png',
    'figures/preferences_security.png',
    'figures/preferences_view.png'
  ])

