
noinst_HEADERS = \
	browser.hpp \
	colorutil.hpp \
	config.hpp \
	default_accumulator.hpp \
	docwindow.hpp \
	dragdrop.hpp \
	encoding.hpp \
	encoding_selector.hpp \
	finddialog.hpp \
	folder.hpp \
	gotodialog.hpp \
	header.hpp \
	i18n.hpp \
	icon.hpp \
	initialdialog.hpp \
	preferences.hpp \
	preferencesdialog.hpp \
	resolv.hpp \
	serialize.hpp \
	statusbar.hpp \
	toolwindow.hpp \
	window.hpp 
